# journal-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  NocoDB_Handover.md  README.md  Taskfile.yml  pyproject.toml
docs/: CURRENT_CODE_ANALYSIS.md  GRIST_CODE_ANALYSIS.md  NEXT_STEPS_FOR_AI.md  NOCODB_CODE_ANALYSIS.md  PAYLOAD_CODE_ANALYSIS.md  SPECIFICATION.md
src/: main.py
src/clients/: grist_client.py  grist_client_config.py  nocodb_client.py  nocodb_client_config.py  payload_client.py  payload_client_config.py  teable_client.py  teable_client_config.py
src/data_sources/: journey_cloud_source.py  journey_models.py
src/journal_core/: converters.py  interfaces.py  manager.py  models.py
tests/: test_converters.py  test_journey_cloud_source.py  test_models.py  test_payload_client.py  test_unzip_journey.py
utils/: analyze_journey.py  attachment_processor.py  run_payload_test.py  unzip_journey.py
