[project]
name = "journal-nocodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "teable-client>=1.1.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
]

[tool.ruff]
line-length = 88
src = ["src", "utils", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src:utils"
ignore_missing_imports = true
# Show error codes so we can decide to ignore them locally if needed
show_error_codes = true
# Pretty-print error messages
pretty = true
