[project]
name = "journal-nocodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "teable-client>=1.1.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "go-task-bin>=3.45.5", # The Task binary provider
]

[tool.ruff]
line-length = 88
# 対象ディレクトリをincludeで明示
include = ["src", "utils", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# formatセクションを追加
[tool.ruff.format]
include = ["src", "utils", "tests"]


[tool.mypy]
python_version = "3.12"
# チェック対象をfilesで明示
files = ["src", "utils", "tests"]
# mypy_pathは、srcとutils内のインポート解決に役立つため残します
mypy_path = "src:utils"
ignore_missing_imports = true
show_error_codes = true
pretty = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]