[project]
name = "journal-nocodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.0.1",
    "pillow>=12.0.0",
    "markdown-it-py>=4.0.0",
    "markdownify>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.14.4",
    "go-task-bin>=3.45.5", # The Task binary provider
    "types-requests>=2.32.4.20250913",
    "ty>=0.0.7",
]

[tool.ruff]
# line-length = 88
line-length = 120
# 対象ディレクトリをincludeで明示
include = [
    "src/**/*.py",
    "utils/**/*.py",
    "tests/**/*.py"
]

[tool.ruff.format]
# シングルクォートを使う（デフォルトはダブル）
quote-style = "double"
# インデントスタイル（スペースかタブか）
indent-style = "space"
# 行末のカンマの扱い（"dynamic", "no-preference", "trailing"）
skip-magic-trailing-comma = false
# docstring内のコード例もフォーマットするか
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ty]
environment = { python-version = "3.12" }
[tool.ty.src]
include = ["src", "utils", "tests"]
# exclude = ["src/generated"]



[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
